--- a/.github/workflows/blocklist-generate.yml
+++ b/.github/workflows/blocklist-generate.yml
@@ -356,7 +356,7 @@ jobs:
               run: |
                   now=$(date -u '+%m/%d/%Y %H:%M')
                   commit_label="Sync" >> $GITHUB_ENV
-                  commit_message="\`️️🔒 $commit_label 🔒\` \`$now\ UTC`" >> $GITHUB_ENV
+                  commit_message="\`️️🔒 $commit_label 🔒\` \`$now UTC\`" >> $GITHUB_ENV
                   echo "COMMIT_MESSAGE=$(echo $commit_message)" >> $GITHUB_ENV
                   echo "NOW=$(echo $now)" >> $GITHUB_ENV
 
@@ -368,7 +368,7 @@ jobs:
               id: task_commit_readme_update
               run: |
                   chmod +x ".github/scripts/update-readme.sh"
-                  run_readme=".github/scripts/update-readme.sh"
+                  run_readme=".github/scripts/update-readme.sh README.md"
                   eval "./$run_readme"
 
             # #
