--- a/.github/workflows/blocklist-generate.yml
+++ b/.github/workflows/blocklist-generate.yml
@@ -93,7 +93,7 @@ jobs:
             - name: "🧱 Install Packages"
               id: task_setup_install
               run: |
-                  sudo apt-get install -y ipcalc ed html2text whois uuid-runtime
+                  sudo apt-get install -y ipcalc ed html2text whois uuid-runtime autoconf
 
             # #
             #   Generate > Cache Packages
@@ -125,6 +125,28 @@ jobs:
               uses: actions/checkout@v4
               with:
                 fetch-depth: 0
+
+            # #
+            #   Generate > Configure
+            #
+            #   this step installs packages we need to manage ipsets.
+            #       - iprange
+            #         this package allows us to convert ip ranges into a CIDR formatted ip
+            #         10.10.0.1-10.10.0.9  =>   10.10.0.1
+            #                                   10.10.0.2/31
+            #                                   10.10.0.4/30
+            #                                   10.10.0.8/31
+            #       https://github.com/firehol/iprange
+            # #
+
+            - name: "⚙️ Configure"
+              id: task_blocklist_generate_configure
+              run: |
+                  git clone https://github.com/firehol/iprange.git ./iprange
+                  cd iprange/
+                  ./autogen.sh
+                  ./configure --disable-man
+                  sudo make && make install
 
             # #
             #   Generate > Set Template Permissions
