ci: add useragent environment variable

--- a/.github/workflows/blocklist-generate.yml
+++ b/.github/workflows/blocklist-generate.yml
@@ -175,7 +175,7 @@ jobs:
             - name: "📦 Set Env Variables"
               id: task_commit_pre
               run: |
-                  useragent="Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/51.0.2704.103 Safari/537.36"
+                  useragent="${{ vars.API_USERAGENT }}"
                   echo "USERAGENT=$(echo $useragent)" >> $GITHUB_ENV
 
             # #
